Tiptap AI Report Generator - Complete

--- a/package.json
+++ b/package.json
@@ -9,10 +9,15 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^2.0.64",
     "@codemirror/lang-html": "^6.4.10",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "@tiptap-pro/extension-ai-agent": "^3.0.0-beta.40",
+    "@tiptap-pro/extension-export": "^3.3.0",
+    "@tiptap-pro/extension-export-docx": "^1.0.0-beta.7",
+    "@tiptap/extension-character-count": "^3.10.3",
     "@tiptap/extension-code-block-lowlight": "^3.6.5",
     "@tiptap/extension-drag-handle-react": "^3.6.5",
     "@tiptap/extension-emoji": "^3.6.5",
@@ -29,10 +34,17 @@
     "@tiptap/pm": "^3.6.5",
     "@tiptap/react": "^3.6.5",
     "@tiptap/starter-kit": "^3.6.5",
+    "ai": "^5.0.89",
     "cloudinary": "^2.5.1",
     "clsx": "^2.1.1",
     "codemirror": "^6",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.3",
+    "lucide-react": "^0.553.0",
+    "marked": "^17.0.0",
     "next": "^15.5.3",
+    "openai": "^6.8.1",
+    "pdf-parse": "^2.4.5",
     "prettier": "^3.6.2",
     "react": "^19.1.1",
     "react-colorful": "^5.6.1",
